--- a/binder/build.gradle
+++ b/binder/build.gradle
@@ -5,6 +5,8 @@ plugins {
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 
+def currentVersion = '0.9.4'
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
@@ -13,8 +15,8 @@ android {
     defaultConfig {
         minSdkVersion 11
         targetSdkVersion 23
-        versionCode 1
-        versionName "0.9.0"
+        versionCode 4
+        versionName currentVersion
     }
 
     buildTypes {
@@ -38,8 +40,6 @@ def bintrayApiKey = properties.getProperty('bintray.key')
 def gitUrl = 'https://github.com/stariy95/android-binder.git'   // Git repository URL
 def siteUrl = 'https://github.com/stariy95/android-binder'      // Homepage URL of the library
 
-def currentVersion = '0.9.1'
-
 version = currentVersion
 group = 'com.kendamasoft'
 
@@ -55,7 +55,7 @@ bintray {
         vcsUrl = gitUrl
         version {
             name = currentVersion
-            desc = 'Android Binder Beta 0.9.0'
+            desc = 'Android Data Binder Beta ' + currentVersion
         }
     }
 }
@@ -64,14 +64,14 @@ bintray {
 install {
     repositories.mavenInstaller {
         pom.project {
-            name 'android-binder'
+            name 'binder'
             description 'Simple annotation based model to view binding library'
             url siteUrl
             inceptionYear '2015'
 
             packaging 'aar'
             groupId 'com.kendamasoft'
-            artifactId 'android-binder'
+            artifactId 'binder'
             version currentVersion
 
             licenses {
